log/build_2023-02-10_22-42-28/turtle_bot_15/stderr.log
/usr/lib/python3/dist-packages/setuptools/command/install.py:34: SetuptoolsDeprecationWarning: setup.py install is deprecated. Use build and pip and other standards-based tools.
  warnings.warn(
  File "/home/robotica/taller1_grupo15/install/turtle_bot_15/lib/python3.10/site-packages/turtle_bot_15/turtle_bot_teleop.py", line 17
    listener = keyboard.Listener(on_press=self.on_press, on_release=self.on_release)
            ^
SyntaxError: invalid non-printable character U+00A0

